# python-htmx

./: README.md  pyproject.toml
app/: main.py  plot.html  plot.py
templates/: home.html.jinja  index.html.jinja  item_list.html.jinja  list.html.jinja  login.html.jinja  page.html.jinja  paging.html.jinja  plot.html.jinja
