[tool.poetry]
name = "python-htmx"
version = "0.1.0"
description = ""
authors = ["Jarek Jaryszew <jarek.jaryszew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
jinja2 = "^3.1.4"
matplotlib = "^3.9.2"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
